--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".App"
+
+
+
         android:theme="@style/Theme.Discriminant">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.DiscriminantList"
+            android:exported="true" />
+        <activity
+            android:name=".activities.DiscriminantDetails"
+            android:exported="true" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
